@@ -1,3 +1,12 @@
+2006-04-15 Bernhard Held <bernhard AT bernhardheld.de>
+
+	* support/regression/collate-results.py: fixed output in case of
+	a valdiag error
+	* support/regression/generate-cases.py: fixed splitting of pathnames
+	with dots
+	* as/hc08/lklibr.c (addfile),
+	* as/mcs51/lklibr.c (addfile): fixed off-by-one bug
+
 2006-04-11 Raphael Neider <rneider AT web.de>
 
 	* src/pic16/gen.c (getFreePtr, pic16_popRegFromString),
